--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "route53-event-forwarder",
   "version": "v1.0.3",
+  "author": "Louis Boudreau <l.boudreau@agendrix.com>",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
     "test:watch": "yarn test --watch --watch-extensions ts",
